Trying to stabilize