@@ -1,25 +1,18 @@
 package com.pareidolia.roster_service.service;
 
-import com.pareidolia.roster_service.entity.Employee;
-import com.pareidolia.roster_service.entity.RosterDay;
-import com.pareidolia.roster_service.entity.RosterWeek;
-import com.pareidolia.roster_service.entity.ShiftConfig;
-import com.pareidolia.roster_service.entity.ShiftType;
+import com.pareidolia.roster_service.entity.*;
 import com.pareidolia.roster_service.enumtype.DayCategory;
 import com.pareidolia.roster_service.enumtype.ShiftCode;
-import com.pareidolia.roster_service.repository.EmployeeRepository;
-import com.pareidolia.roster_service.repository.RosterDayRepository;
-import com.pareidolia.roster_service.repository.RosterWeekRepository;
-import com.pareidolia.roster_service.repository.ShiftAssignmentRepository;
-import com.pareidolia.roster_service.repository.ShiftConfigRepository;
+import com.pareidolia.roster_service.exception.BusinessRuleException;
+import com.pareidolia.roster_service.repository.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Comparator;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -32,12 +25,6 @@ public class WeekendNightDonorRebalanceService {
     private final ShiftAssignmentRepository shiftAssignmentRepository;
     private final ShiftAssignmentService assignmentService;
     private final EmployeeRepository employeeRepository;
-
-    // seniors said max two weekday donor resources/week
-    private static final int MAX_WEEKLY_DONOR_MOVES = 2;
-
-    // weekday night-family must remain at least 7
-    private static final int MIN_WEEKDAY_NIGHT_FAMILY_AFTER_MOVE = 7;
 
     @Transactional
     public void execute(LocalDate weekStartDate) {
@@ -53,237 +40,164 @@ public class WeekendNightDonorRebalanceService {
                 allDays.stream()
                         .filter(d -> d.getDayCategory() == DayCategory.WEEKDAY)
                         .sorted(Comparator.comparing(RosterDay::getDayDate))
-                        .collect(Collectors.toList());
+                        .toList();
 
         List<RosterDay> weekends =
                 allDays.stream()
                         .filter(d -> d.getDayCategory() == DayCategory.WEEKEND)
                         .sorted(Comparator.comparing(RosterDay::getDayDate))
-                        .collect(Collectors.toList());
+                        .toList();
 
-        Set<Long> movedEmployees = new HashSet<>();
-        int movesLeft = MAX_WEEKLY_DONOR_MOVES;
+        int donorMovesLeft = 2;
 
         for (RosterDay weekendDay : weekends) {
 
-            if (movesLeft <= 0) break;
-
-            List<ShiftConfig> configs =
+            List<ShiftConfig> weekendConfigs =
                     shiftConfigRepository
                             .findByRosterWeek_IdAndDayCategoryAndActiveTrue(
                                     week.getId(),
                                     DayCategory.WEEKEND
                             );
 
-            // weekend shortage priority
-            configs.sort((a, b) ->
-                    Integer.compare(
-                            priority(a.getShiftType().getCode()),
-                            priority(b.getShiftType().getCode())
-                    )
-            );
+            for (ShiftConfig cfg : weekendConfigs) {
 
-            for (ShiftConfig cfg : configs) {
-
-                if (movesLeft <= 0) break;
+                if (donorMovesLeft <= 0) {
+                    return;
+                }
 
                 ShiftCode targetCode = cfg.getShiftType().getCode();
 
-                if (targetCode == ShiftCode.ON_DUTY) continue;
+                if (targetCode == ShiftCode.ON_DUTY) {
+                    continue;
+                }
 
                 int required = cfg.getRequiredResources();
 
                 long current =
-                        shiftAssignmentRepository.countByRosterDayAndShiftCode(
-                                weekendDay.getId(),
-                                targetCode
-                        );
+                        shiftAssignmentRepository
+                                .countByRosterDayAndShiftCode(
+                                        weekendDay.getId(),
+                                        targetCode
+                                );
 
-                while (current < required && movesLeft > 0) {
+                if (current >= required) {
+                    continue;
+                }
+
+                int shortage = required - (int) current;
+
+                while (shortage > 0 && donorMovesLeft > 0) {
 
                     boolean moved =
                             moveOneDonor(
                                     weekdays,
                                     weekendDay,
-                                    cfg.getShiftType(),
-                                    movedEmployees
+                                    cfg.getShiftType()
                             );
 
                     if (!moved) {
                         break;
                     }
 
-                    movesLeft--;
-
-                    current =
-                            shiftAssignmentRepository.countByRosterDayAndShiftCode(
-                                    weekendDay.getId(),
-                                    targetCode
-                            );
+                    shortage--;
+                    donorMovesLeft--;
                 }
             }
         }
 
-        log.info("WeekendNightDonorRebalance completed");
+        log.info("Weekend donor rebalance completed");
     }
 
     private boolean moveOneDonor(
             List<RosterDay> weekdays,
             RosterDay weekendDay,
-            ShiftType targetShift,
-            Set<Long> movedEmployees
+            ShiftType weekendShift
     ) {
 
         for (RosterDay weekday : weekdays) {
 
-            // hard threshold: weekday NIGHT + GRAVEYARD must remain >= 7
-            long nightCount =
-                    shiftAssignmentRepository.countByRosterDayAndShiftCode(
-                            weekday.getId(),
-                            ShiftCode.NIGHT
-                    );
-
-            long graveyardCount =
-                    shiftAssignmentRepository.countByRosterDayAndShiftCode(
-                            weekday.getId(),
-                            ShiftCode.GRAVEYARD
-                    );
-
-            long totalNightFamily = nightCount + graveyardCount;
-
-            if ((totalNightFamily - 1) < MIN_WEEKDAY_NIGHT_FAMILY_AFTER_MOVE) {
-                continue;
-            }
-
-            Employee donor =
-                    findSafeDonor(
-                            weekday,
-                            ShiftCode.GRAVEYARD,
-                            movedEmployees,
-                            weekendDay
-                    );
-
+            Employee donor = findDonor(weekday, ShiftCode.GRAVEYARD);
             ShiftCode donorCode = ShiftCode.GRAVEYARD;
 
             if (donor == null) {
-                donor =
-                        findSafeDonor(
-                                weekday,
-                                ShiftCode.NIGHT,
-                                movedEmployees,
-                                weekendDay
-                        );
+                donor = findDonor(weekday, ShiftCode.NIGHT);
                 donorCode = ShiftCode.NIGHT;
             }
 
-            if (donor == null) continue;
+            if (donor == null) {
+                continue;
+            }
 
             try {
 
-                // duplicate safety
-                boolean alreadyWeekendAssigned =
+                // 🔥 IMPORTANT: skip if already working on this weekend day
+                boolean alreadyAssigned =
                         shiftAssignmentRepository
                                 .existsByEmployee_IdAndRosterDay_Id(
                                         donor.getId(),
                                         weekendDay.getId()
                                 );
 
-                if (alreadyWeekendAssigned) {
+                if (alreadyAssigned) {
                     continue;
                 }
 
-                Employee managed =
-                        employeeRepository.findById(donor.getId())
+                // 🔥 refetch managed entity
+                Employee managedDonor =
+                        employeeRepository
+                                .findById(donor.getId())
                                 .orElseThrow();
 
-                // remove weekday donor shift first
+                // 🔥 assign weekend shift first
+                assignmentService.assignDragged(
+                        managedDonor,
+                        weekendDay,
+                        weekendShift
+                );
+
+                // 🔥 remove weekday donor shift after success
                 shiftAssignmentRepository
                         .deleteByEmployeeAndRosterDayAndShiftType_Code(
-                                managed.getId(),
+                                managedDonor.getId(),
                                 weekday.getId(),
                                 donorCode
                         );
 
-                shiftAssignmentRepository.flush();
-
-                // assign weekend shortage shift
-                assignmentService.assignDragged(
-                        managed,
-                        weekendDay,
-                        targetShift
-                );
-
-                movedEmployees.add(managed.getId());
-
                 log.warn(
-                        "Moved donor emp={} from {} {} -> {} {}",
-                        managed.getEmployeeCode(),
+                        "Donor moved emp={} from {} {} -> {} {}",
+                        managedDonor.getEmployeeCode(),
                         weekday.getDayDate(),
                         donorCode,
                         weekendDay.getDayDate(),
-                        targetShift.getCode()
+                        weekendShift.getCode()
                 );
 
                 return true;
 
-            } catch (Exception ex) {
+            } catch (BusinessRuleException ex) {
+                log.warn("Donor move blocked: {}", ex.getMessage());
 
-                log.error(
-                        "Donor move failed emp={} reason={}",
-                        donor.getEmployeeCode(),
-                        ex.getMessage()
-                );
+            } catch (Exception ex) {
+                log.error("Donor move failed", ex);
             }
         }
 
         return false;
     }
 
-    private Employee findSafeDonor(
-            RosterDay weekday,
-            ShiftCode code,
-            Set<Long> movedEmployees,
-            RosterDay weekendDay
+    private Employee findDonor(
+            RosterDay day,
+            ShiftCode code
     ) {
 
-        List<Employee> pool =
-                shiftAssignmentRepository
-                        .findEmployeesByShiftCodeAndDate(
-                                code,
-                                weekday.getDayDate()
-                        );
-
-        for (Employee emp : pool) {
-
-            if (movedEmployees.contains(emp.getId())) {
-                continue;
-            }
-
-            boolean alreadyWeekendAssigned =
-                    shiftAssignmentRepository
-                            .existsByEmployee_IdAndRosterDay_Id(
-                                    emp.getId(),
-                                    weekendDay.getId()
-                            );
-
-            if (alreadyWeekendAssigned) {
-                continue;
-            }
-
-            return emp;
-        }
-
-        return null;
-    }
-
-    private int priority(ShiftCode code) {
-
-        return switch (code) {
-            case EARLY_MORNING -> 1;
-            case EVENING -> 2;
-            case NIGHT -> 3;
-            case GRAVEYARD -> 4;
-            default -> 99;
-        };
+        return shiftAssignmentRepository
+                .findEmployeesByShiftCodeAndDate(
+                        code,
+                        day.getDayDate()
+                )
+                .stream()
+                .sorted(Comparator.comparingLong(Employee::getId))
+                .findFirst()
+                .orElse(null);
     }
 }
